--- a/android-client/app/src/main/res/values-zh/strings.xml
+++ b/android-client/app/src/main/res/values-zh/strings.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">UniversalTeleport</string>
-    <string name="notification_channel_id">统一传送门</string>
-    <string name="notification_channel_desc">这个通知是为了不让进程被杀掉。</string>
+    <string name="notification_main_channel_name">统一传送门</string>
+    <string name="notification_main_channel_desc">这个通知是为了不让进程被杀掉。</string>
     <string name="notification_title_name">传送门正在运行中~</string>
     <string name="notification_title_content1">我这一生如履薄冰，你说我能走到对岸吗</string>
-    <string name="share_activity_label">发送到</string>
+    <string name="share_activity_label">文件传送</string>
     <string name="main_activity_key_lable">密钥:</string>
     <string name="main_activity_key_plain_text">输入你的密钥</string>
     <string name="share_activity_search_device_notice">正在搜索设备</string>
     <string name="share_text_activity_label">文本传送</string>
-    <string name="main_activity_ip_plain_text">输入你的电脑IP</string>
+    <string name="main_activity_ip_plain_text">输入要连接的设备IP</string>
     <string name="main_activity_save_button">保存设置</string>
-    <string name="main_activity_illustrate_text">1.填写你电脑的IP地址\n2.打开这个应用的通知权限\n3.打开这个应用的写入剪切板权限并选择始终允许\n4.打开这个应用的悬浮窗权限（MIUI12以上需要）\n5.退到后台开始使用吧！</string>
+    <string name="main_activity_illustrate_text">1.填写一个密钥，不填写的话数据不会加密且其他设备可能会搜索到你 \n2.填写你想连接的设备的IP地址（发送文件时会指定发送到该设备）\n3.打开这个应用的通知权限（如果你看不到APP发送的通知）\n4.打开这个应用的写入剪切板权限并选择始终允许（MIUI12以上需要，其他设备未测试）\n5.打开这个应用的悬浮窗权限（MIUI12以上需要，其他设备未测试） \n6.退到后台开始使用吧！</string>
+    <string name="main_activity_device_name_lable">昵称:</string>
+    <string name="main_activity_device_name_plain_text">输入你的设备昵称</string>
+    <string name="main_activity_title_lable">应用设置</string>
+    <string name="main_activity_toast_text">设置成功了！</string>
+    <string name="notification_file_share_title">文件传送</string>
+    <string name="notification_file_share_type_send">" 已发送 "</string>
+    <string name="notification_file_share_result_success_send">发送成功！</string>
+    <string name="notification_file_share_type_recv">" 已接收 "</string>
+    <string name="notification_file_share_result_success_recv">接收成功！\n已保存到/Download/UniversalTeleport</string>
+    <string name="notification_file_share_result_fail_recv">接收失败咧~</string>
+    <string name="notification_file_channel_name">文件传输通知</string>
+    <string name="notification_file_channel_desc">文件传输时会发出此通知</string>
+    <string name="notification_file_share_result_fail_send">发送失败咧~</string>
 </resources>
